changed index.html - added footer box with divs, p, h2, img. Changed style .css - adde styles for footer box

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Localise_ArtemYershov_09</title>
+    <link rel="stylesheet" href="fonts/GraphikLCG-Regular.ttf">
+    <link rel="stylesheet" href="fonts/GraphikLCG-Semibold.ttf">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -18,42 +20,44 @@
                 </a>
             </div>
         </logo>
-        <div class="menu-wrap">
-            <ul class="menu">
-                <li class="menu__item">
-                    <a href="#" class="menu__link menu__link--current">
-                        Product
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">
-                        Features
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">
-                        Pricing
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">
-                        Case studies
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">
-                        Resources
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="header__btn-wrap">
-            <a href="#" class="header__btn-transperent btn">
-                Log in
-            </a>
-            <a href="#" class="header__btn btn">
-                Try it free
-            </a>
+        <div class="box">
+            <div class="menu-wrap">
+                <ul class="menu">
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">
+                            Product
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">
+                            Features
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">
+                            Pricing
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">
+                            Case studies
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">
+                            Resources
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header__btn-wrap">
+                <a href="#" class="header__btn-transperent btn">
+                    Log in
+                </a>
+                <a href="#" class="header__btn btn">
+                    Try it free
+                </a>
+            </div>
         </div>
     </header>
     <div class="hero">
@@ -437,16 +441,220 @@
                     Try for free or let us show you how it works.
                 </p>
                 <div class="localization__btn-wrap">
-                <a href="#" class="localization__btn .btn">
-                    Try it free
-                </a>                
-            </div>
+                    <a href="#" class="localization__btn .btn">
+                        Try it free
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 
-
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrap">
+                <div class="footer__article">
+                    <h3 class="footer__title">
+                        Case Studies
+                    </h3>
+                    <div class="footer__picture-wrap">
+                        <img src="images/footer/bicyclePicture.png" alt="bicycleRacingPicture" class="footer__picture">
+                    </div>
+                    <div class="footer__logo-wrap">
+                        <img src="images/footer/specialized.svg" alt="" class="footer__logo">
+                    </div>
+                    <p class="footer__text">
+                        Riding towards global success with a 100% teammate enthusiasm
+                    </p>
+                    <a href="#" class="footer__link">
+                        Read more
+                    </a>
+                </div>
+                <div class="nav">
+                    <div class="nav__wrap">
+                        <p class="nav__text">Product</p>
+                        <ul class="nav__menu">
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    For developers
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    For managers
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    For translators
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    For designers
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Integrations
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Security
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Automations
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav__wrap">
+                        <p class="nav__text">Support</p>
+                        <ul class="nav__menu">
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Contact
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Documentation
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Status
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Product Updates
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    CLI Tool
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    API Reference
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    iOS and Android SDK
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Supported File Formats
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav__wrap">
+                        <p class="nav__text">Company</p>
+                        <ul class="nav__menu">
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    About
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Blog
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Careers | We`re Hiring
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Case Studies
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Media Kit
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav__wrap">
+                        <p class="nav__text">Legal</p>
+                        <ul class="nav__menu">
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Terms of Service
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Privacy Policy
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Cookie Policy
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Privacy Shield
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    DPA
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    List of Sub-processors
+                                </a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="#" class="nav__link">
+                                    Candidates Privacy Notice
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="basement">
+                <div class="basement__wrap">
+                    <div class="basement__logo">
+                        <div class="basement__picture-wrap">
+                            <img src="images/footer/localisePicture.svg" alt="localisePicture"
+                                class="basement__picture">
+                        </div>
+                        <p class="basement__text">
+                            Localization workflow for your web and mobile apps, games and digital content.
+                        </p>
+                    </div>
+                </div>
+                <div class="basement__copyright-wrap">
+                <p class="basement__copyright">
+                    &copy 2001-2020
+                </p>
+                <p class="basement__copyright">
+                    All rights reserved.
+                </p>
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
