Changed style .css - added comment changed units of mesurment into percent

--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Localise_ArtemYershov_09</title>
-    <link rel="stylesheet" href="fonts/GraphikLCG-Regular.ttf">
-    <link rel="stylesheet" href="fonts/GraphikLCG-Semibold.ttf">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -51,7 +49,7 @@
                 </ul>
             </div>
             <div class="header__btn-wrap">
-                <a href="#" class="header__btn-transperent btn">
+                <a href="#" class="header__btn transperent">
                     Log in
                 </a>
                 <a href="#" class="header__btn btn">
@@ -64,9 +62,9 @@
         <div class="container">
             <div class="hero__items-wrap">
                 <div class="hero__article">
-                    <div class="hero__title">
+                    <h2 class="hero__title">
                         Accelerate localization from code to delivery
-                    </div>
+                    </h2>
                     <p class="hero__text">
                         A localization and translation management platform for agile teams. Embrace automation, workflow
                         transparency, and fast project delivery.
@@ -75,7 +73,7 @@
                         <a href="#" class="hero__btn btn">
                             Try it free
                         </a>
-                        <a href="#" class="hero__btn-transperent btn">
+                        <a href="#" class="hero__btn transperent">
                             Book a demo
                         </a>
                     </div>
@@ -119,13 +117,13 @@
             </div>
         </div>
     </div>
-    <div class="contens">
+    <div class="contents">
         <div class="container">
             <article class="contents__article">
                 <div class="contents__description">
-                    <h2 class="contents__title">
+                    <h3 class="contents__title">
                         Control the localization process
-                    </h2>
+                    </h3>
                     <p class="contents__text">
                         Collaborate with your team in a single workspace. Add and assign <a href="#"
                             class="contents__hypertext">tasks</a>, track progress, and enjoy a seamless localization
@@ -142,13 +140,10 @@
         </div>
         <div class="container">
             <article class="contents__article">
-                <div class="contents__picture-wrap">
-                    <img src="images/options/shortenTimePicture.png" alt="shortenTimePicture" class="contents__picture">
-                </div>
                 <div class="contents__description">
-                    <h2 class="contents__title">
+                    <h3 class="contents__title">
                         Shorten time to market
-                    </h2>
+                    </h3>
                     <p class="contents__text">
                         Localize your product in parallel with the development cycle. Use the <a href="#"
                             class="contents__hypertext"> Adobe XD</a>,
@@ -160,14 +155,17 @@
                         Start now
                     </a>
                 </div>
+                <div class="contents__picture-wrap">
+                    <img src="images/options/shortenTimePicture.png" alt="shortenTimePicture" class="contents__picture">
+                </div>
             </article>
         </div>
         <div class="container">
             <article class="contents__article">
                 <div class="contents__description">
-                    <h2 class="contents__title">
+                    <h3 class="contents__title">
                         Ensure quality
-                    </h2>
+                    </h3>
                     <p class="contents__text">
                         Use built-in tools — e.g. <a href="#" class="contents__hypertext">translation memory</a>,
                         machine translation, and <a href="#" class="contents__hypertext">QA checks</a> — to enhance the
@@ -187,13 +185,10 @@
         </div>
         <div class="container">
             <article class="contents__article">
-                <div class="contents__picture-wrap">
-                    <img src="images/options/formulaPicture.png" alt="formulaPicture" class="contents__picture">
-                </div>
                 <div class="contents__description">
-                    <h2 class="contents__title">
+                    <h3 class="contents__title">
                         Less work for developers
-                    </h2>
+                    </h3>
                     <p class="contents__text">
                         Eliminate the hassle of localization and let developers get back to their main tasks. Save hours
                         with the powerful <a href="#" class="contents__hypertext">API</a>, <a href="#"
@@ -205,6 +200,9 @@
                     <a href="#" class="contents__link">
                         Start now
                     </a>
+                </div>
+                <div class="contents__picture-wrap">
+                    <img src="images/options/formulaPicture.png" alt="formulaPicture" class="contents__picture">
                 </div>
 
             </article>
@@ -313,9 +311,9 @@
                         <img src="images/boostTeam/managersPicture.svg" alt="managersPicture" class="team__picture">
                     </div>
                     <div class="team__description">
-                        <h3 class="team__titles">
+                        <h4 class="team__titles">
                             Managers
-                        </h3>
+                        </h4>
                         <p class="team__text">
                             Update existing and launch new features and products while simultaneously localizing them in
                             multiple languages. Streamline your team's workflow, maximize productivity, and speed up
@@ -331,13 +329,11 @@
                         <img src="images/boostTeam/developersPicture.svg" alt="developersPicture" class="team__picture">
                     </div>
                     <div class="team__description">
-                        <h3 class="team__titles">
+                        <h4 class="team__titles">
                             Developers
-                        </h3>
+                        </h4>
                         <p class="team__text">
-                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a
-                                href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make
-                            changes in the code, they'll be automatically imported to Lokalise for translation.
+                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make changes in the code, they'll be automatically imported to lokalise for translation.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -350,13 +346,11 @@
                             class="team__picture">
                     </div>
                     <div class="team__description">
-                        <h3 class="team__titles">
+                        <h4 class="team__titles">
                             Translators
-                        </h3>
+                        </h4>
                         <p class="team__text">
-                            Eliminate double-work and neverending revisions with visual context (screenshots) and live
-                            previews. Improve the quality and speed of your translations with built-in CAT tools, like
-                            autocomplete, inline machine translation, and translation memory.
+                            Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -370,12 +364,9 @@
         <div class="container">
             <div class="wrap">
                 <div class="quote__body-wrap">
-                    <blockquote class="quote__item">
-                        <p class="quote__text"> “Lokalise has turned a task we were dreading into an absolute pleasure.
-                            Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots
-                            has been a lifesaver, and over-the-air updates are the icing on the cake.”
-                        </p>
-                    </blockquote>
+                    <p class="quote__text">
+                        “Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”
+                    </p>
                     <p class="quote__author">
                         Edward Cooper, Chief Mobile Officer
                     </p>
@@ -396,9 +387,9 @@
                     <div class="rewards___img-wrap">
                         <img src="images/rewards/cakePicture.svg" alt="cakePicture" class="rewards__picture">
                     </div>
-                    <h2 class="rewards__title">
+                    <h3 class="rewards__title">
                         The most-loved translation management software
-                    </h2>
+                    </h3>
                 </div>
                 <div class="rewards__item">
                     <div class="rewards___picture-wrap">
@@ -434,21 +425,20 @@
     <div class="localization">
         <div class="container">
             <div class="localization__wrap">
-                <h1 class="localization__title">
+                <h2 class="localization__title">
                     Localization made easy. Why wait?
-                </h1>
+                </h2>
                 <p class="localization__text">
                     Try for free or let us show you how it works.
                 </p>
                 <div class="localization__btn-wrap">
-                    <a href="#" class="localization__btn .btn">
+                    <a href="#" class="localization__btn btn">
                         Try it free
                     </a>
                 </div>
             </div>
         </div>
     </div>
-
     <footer class="footer">
         <div class="container">
             <div class="footer__wrap">
@@ -471,7 +461,7 @@
                 </div>
                 <div class="nav">
                     <div class="nav__wrap">
-                        <p class="nav__text">Product</p>
+                        <p class="nav__title">Product</p>
                         <ul class="nav__menu">
                             <li class="nav__item">
                                 <a href="#" class="nav__link">
@@ -516,7 +506,7 @@
                         </ul>
                     </div>
                     <div class="nav__wrap">
-                        <p class="nav__text">Support</p>
+                        <p class="nav__title">Support</p>
                         <ul class="nav__menu">
                             <li class="nav__item">
                                 <a href="#" class="nav__link">
@@ -561,7 +551,7 @@
                         </ul>
                     </div>
                     <div class="nav__wrap">
-                        <p class="nav__text">Company</p>
+                        <p class="nav__title">Company</p>
                         <ul class="nav__menu">
                             <li class="nav__item">
                                 <a href="#" class="nav__link">
@@ -591,7 +581,7 @@
                         </ul>
                     </div>
                     <div class="nav__wrap">
-                        <p class="nav__text">Legal</p>
+                        <p class="nav__title">Legal</p>
                         <ul class="nav__menu">
                             <li class="nav__item">
                                 <a href="#" class="nav__link">
@@ -645,13 +635,13 @@
                     </div>
                 </div>
                 <div class="basement__copyright-wrap">
-                <p class="basement__copyright">
-                    &copy 2001-2020
-                </p>
-                <p class="basement__copyright">
-                    All rights reserved.
-                </p>
-            </div>
+                    <p class="basement__copyright">
+                        &copy 2001-2020
+                    </p>
+                    <p class="basement__copyright">
+                        All rights reserved.
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
