--- a/Lokalise/index.html
+++ b/Lokalise/index.html
@@ -48,7 +48,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="header__btn-wrap">
+            <div class="header__button-wrap">
                 <a href="#" class="header__btn transperent">
                     Log in
                 </a>
@@ -333,7 +333,9 @@
                             Developers
                         </h4>
                         <p class="team__text">
-                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make changes in the code, they'll be automatically imported to lokalise for translation.
+                            Set up an integration with your code repository or your own custom SDK via Lokalise's <a
+                                href="#" class="team__hypertext">powerful API</a>. Do that once, and every time you make
+                            changes in the code, they'll be automatically imported to lokalise for translation.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -350,7 +352,9 @@
                             Translators
                         </h4>
                         <p class="team__text">
-                            Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
+                            Eliminate double-work and neverending revisions with visual context (screenshots) and live
+                            previews. Improve the quality and speed of your translations with built-in CAT tools, like
+                            autocomplete, inline machine translation, and translation memory.
                         </p>
                         <a href="#" class="team__link">
                             Learn more
@@ -365,7 +369,9 @@
             <div class="wrap">
                 <div class="quote__body-wrap">
                     <p class="quote__text">
-                        “Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”
+                        “Lokalise has turned a task we were dreading into an absolute pleasure. Great platform,
+                        intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver,
+                        and over-the-air updates are the icing on the cake.”
                     </p>
                     <p class="quote__author">
                         Edward Cooper, Chief Mobile Officer
